sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:6: error: not found: value changed
		changed = false ; 
                ^AlgBubbleSort2:11: error: not found: value changed
					changed = true ;
                                        ^AlgBubbleSort2:17: error: not found: value changed
	}while(changed)
               ^